<resources>
    <string name="app_name">ThrowWarning</string>
    <string name="title_active_login">ThrowWarning</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre</string>
    <string name="email">Correo Electronico</string>
    <string name="tel">Número Celular</string>
    <string name="login">Ingresar</string>
    <string name="SelectUser">Selecciona un contacto:</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup"><u>Registrarse</u></string>
    <string name="all">TODO</string>
    <string name="user_email">usuariodefault@gmail.com</string>
    <string name="user_name">Usuario Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password"><u>Cambiar contraseña</u></string>
    <string name="forget_password"><u>¿olvidaste tu contraseña?</u></string>
    <string name="title_check_email">Verificacion de correo electronico</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="receptor">Cambiar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="Escribir">Escribir...</string>
    <string name="BIENVENIDO">BIENVENIDO</string>
    <string name="Tipo_cuenta">Tipo de cuenta</string>
    <string name="CHAT">📩 CHATS</string>
    <string name="Cerrar_sesión">🚪 Cerrar Sesión</string>
    <string name="video_llamada">🎥 Video Llamada</string>
    <string name="Llamada_entrante">Llamada entrante</string>
    <string name="calling">Llamando....</string>

    <string name="Cuidador">Cuidador</string>
    <string name="Persona_cuidar">Persona a cuidar</string>
    <string name="Mensaje">Mensaje</string>
    <string name="fecha">fecha</string>
    <string name="str_button"><u>Cambiar idioma</u></string>
</resources>