<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/iconhome"
                tools:ignore="VectorDrawableCompat"/>
        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BIENVENIDO"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <!-- QUITADO, NIVELES DE USUARIO YA NO SE OCUPAN
        <TextView
            android:id="@+id/NivelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tipo_cuenta"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CHAT"
                android:textStyle="bold"
                android:paddingLeft="20sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:textColor="@color/white"
                android:backgroundTint="#9933ff"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textSize="25sp"
                android:textAlignment="viewStart"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ingresarbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_llamada"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingLeft="20sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:textColor="@color/white"
                android:backgroundTint="#9933ff"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textAlignment="viewStart"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cerrar_sesión"
                android:textStyle="bold"
                android:paddingLeft="20sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:textColor="@color/white"
                android:backgroundTint="#dd1010"
                android:background="@android:drawable/dialog_holo_light_frame"

                android:textSize="25sp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>